; ModuleID = '/home/carl/AnghaBench/h2o/src/extr_ssl.c_ticket_sort_compare.c'
source_filename = "/home/carl/AnghaBench/h2o/src/extr_ssl.c_ticket_sort_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_session_ticket_t = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @ticket_sort_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ticket_sort_compare(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.st_session_ticket_t*, align 8
  %7 = alloca %struct.st_session_ticket_t*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i8**
  %10 = load i8*, i8** %9, align 8
  %11 = bitcast i8* %10 to %struct.st_session_ticket_t*
  store %struct.st_session_ticket_t* %11, %struct.st_session_ticket_t** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to i8**
  %14 = load i8*, i8** %13, align 8
  %15 = bitcast i8* %14 to %struct.st_session_ticket_t*
  store %struct.st_session_ticket_t* %15, %struct.st_session_ticket_t** %7, align 8
  %16 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %6, align 8
  %17 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %7, align 8
  %20 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %18, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %2
  %24 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %6, align 8
  %25 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %7, align 8
  %28 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp sgt i64 %26, %29
  %31 = zext i1 %30 to i64
  %32 = select i1 %30, i32 -1, i32 1
  store i32 %32, i32* %3, align 4
  br label %41

33:                                               ; preds = %2
  %34 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %6, align 8
  %35 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.st_session_ticket_t*, %struct.st_session_ticket_t** %7, align 8
  %38 = getelementptr inbounds %struct.st_session_ticket_t, %struct.st_session_ticket_t* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @memcmp(i32 %36, i32 %39, i32 4)
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %33, %23
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @memcmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
